create vendors setup done
