# backend/src/main/kotlin/com/wedify/vendors/domain/models/BusinessData.kt
@@ -1,13 +1,0 @@
-package com.wedify.vendors.domain.models
-
-import kotlinx.serialization.Serializable
-
-@Serializable
-data class BusinessData(
-    val basicInfo: Vendors,
-    val regions: List<VendorRegions>,
-    val portfolio: VendorPortfolio,
-    val packages: List<VendorPackages>,
-    val promotions: List<VendorPromotions>,
-    val restDays: List<VendorsRestDays>,
-)
