# backend/src/main/kotlin/com/wedify/vendors/domain/models/VendorPortfolio.kt
@@ -1,10 +1,0 @@
-package com.wedify.vendors.domain.models
-
-import kotlinx.serialization.Serializable
-
-@Serializable
-data class VendorPortfolio(
-    val images: List<String>,
-    val videos: List<String>,
-    val tags: List<VendorsPortfolioTags>,
-)
